FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/.metadata/.plugins/org.eclipse.cdt.ui/conv_accel_sw.build.log
18:20:53 **** Build of configuration Debug for project conv_accel_sw ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/CPE_driver.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/CPE_driver.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/sw/conv_accel_hw/standalone_domain/bspinclude/include -MMD -MP -MF"src/CPE_driver.d" -MT"src/CPE_driver.o" -o "src/CPE_driver.o" "../src/CPE_driver.c"
In file included from ../src/CPE_driver.c:8:
../src/CPE_driver.h:59:1: warning: useless storage class specifier in empty declaration
   59 | };
      | ^
../src/CPE_driver.c: In function 'fill_image':
../src/CPE_driver.c:49:15: warning: suggest parentheses around comparison in operand of '|' [-Wparentheses]
   49 |   if(next_char==','|next_char=='\n'){
      |      ~~~~~~~~~^~~~~
../src/CPE_driver.c: In function 'Process_Image':
../src/CPE_driver.c:91:6: warning: variable 'Value' set but not used [-Wunused-but-set-variable]
   91 |  u32 Value;
      |      ^~~~~
../src/CPE_driver.c:87:6: warning: unused variable 'Tries' [-Wunused-variable]
   87 |  int Tries = NUMBER_OF_TRANSFERS;
      |      ^~~~~
../src/CPE_driver.c: In function 'CC_comand_register':
../src/CPE_driver.c:233:1: warning: control reaches end of non-void function [-Wreturn-type]
  233 | }
      | ^
'Finished building: ../src/CPE_driver.c'
' '
'Building file: ../src/SD.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/SD.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/sw/conv_accel_hw/standalone_domain/bspinclude/include -MMD -MP -MF"src/SD.d" -MT"src/SD.o" -o "src/SD.o" "../src/SD.c"
../src/SD.c: In function 'SD_Transfer':
../src/SD.c:16:10: warning: unused variable 'return_addr' [-Wunused-variable]
   16 |     u32 *return_addr=0;
      |          ^~~~~~~~~~~
'Finished building: ../src/SD.c'
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/sw/conv_accel_hw/standalone_domain/bspinclude/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
In file included from ../src/helloworld.c:13:
../src/CPE_driver.h:59:1: warning: useless storage class specifier in empty declaration
   59 | };
      | ^
../src/helloworld.c: In function 'main':
../src/helloworld.c:79:26: error: 'im1' undeclared (first use in this function)
   79 |  Status = Process_Image(&im1);
      |                          ^~~
../src/helloworld.c:79:26: note: each undeclared identifier is reported only once for each function it appears in
../src/helloworld.c:56:6: warning: unused variable 'prc_status_err' [-Wunused-variable]
   56 |  u32 prc_status_err;
      |      ^~~~~~~~~~~~~~
../src/helloworld.c:55:6: warning: unused variable 'prc_status_last_state' [-Wunused-variable]
   55 |  u32 prc_status_last_state;
      |      ^~~~~~~~~~~~~~~~~~~~~
../src/helloworld.c:54:6: warning: unused variable 'prc_status_state' [-Wunused-variable]
   54 |  u32 prc_status_state;
      |      ^~~~~~~~~~~~~~~~
../src/helloworld.c:53:6: warning: unused variable 'prc_status' [-Wunused-variable]
   53 |  u32 prc_status;
      |      ^~~~~~~~~~
../src/helloworld.c:52:6: warning: unused variable 'prc_init' [-Wunused-variable]
   52 |  u32 prc_init;
      |      ^~~~~~~~
../src/helloworld.c:51:6: warning: unused variable 'dcfg_init' [-Wunused-variable]
   51 |  u32 dcfg_init;
      |      ^~~~~~~~~
../src/helloworld.c:49:6: warning: unused variable 'gpio_init' [-Wunused-variable]
   49 |  u32 gpio_init;
      |      ^~~~~~~~~
../src/helloworld.c:48:6: warning: unused variable 'copy_status' [-Wunused-variable]
   48 |  u32 copy_status;
      |      ^~~~~~~~~~~
../src/helloworld.c: In function 'XDcfg_Initialize':
../src/helloworld.c:144:6: warning: unused variable 'CtrlReg' [-Wunused-variable]
  144 |  u32 CtrlReg;
      |      ^~~~~~~
../src/helloworld.c: At top level:
../src/helloworld.c:17:12: warning: 'CheckData' declared 'static' but never defined [-Wunused-function]
   17 | static int CheckData(u32 type);
      |            ^~~~~~~~~
../src/helloworld.c:142:15: warning: 'XDcfg_Initialize' defined but not used [-Wunused-function]
  142 | static XDcfg *XDcfg_Initialize(u16 DeviceId)
      |               ^~~~~~~~~~~~~~~~
'Finished building: ../src/helloworld.c'
' '
'Building file: ../src/platform.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/platform.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/sw/conv_accel_hw/standalone_domain/bspinclude/include -MMD -MP -MF"src/platform.d" -MT"src/platform.o" -o "src/platform.o" "../src/platform.c"
'Finished building: ../src/platform.c'
' '
'Building target: conv_accel_sw.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -LC:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/sw/conv_accel_hw/standalone_domain/bsplib/lib -o "conv_accel_sw.elf"  ./src/CPE_driver.o ./src/SD.o ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group -Wl,--start-group,-lxilffs,-lxil,-lgcc,-lc,--end-group
arm-xilinx-eabi-gcc.exe: error: ./src/helloworld.o: No such file or directory
'Finished building target: conv_accel_sw.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size conv_accel_sw.elf  |tee "conv_accel_sw.elf.size"
arm-none-eabi-size: 'conv_accel_sw.elf': No such file
'Finished building: conv_accel_sw.elf.size'
' '

18:20:54 Build Finished (took 1s.79ms)

